[project]
name = "vulcan"
version = "0.1.0"
description = "Autonomous breakthrough-to-OSS infra factory"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vulcan = "vulcan.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vulcan", "vulcan.gates"]
